# Bastion

./: .env.example  .gitignore  INSTALL.md  README.md  debug-openrc.sh  install.sh  pyproject.toml  requirements.txt  setup.py
bastion/: __init__.py  auth.py  config.py  db.py  logging.py  main.py  models.py  proxy.py  router.py  server.py
openrc/: README.md  bastion  bastion.conf  install-openrc.sh
scripts/: generate_hostkey.py
systemd/: bastion.service
